--- a/package.json
+++ b/package.json
@@ -8,6 +8,15 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.9.7"
-  }
+    "@vuepress/bundler-vite": "^2.0.0-rc.26",
+    "@vuepress/theme-default": "^2.0.0-rc.122",
+    "copy-webpack-plugin": "^13.0.1",
+    "html-webpack-plugin": "^5.6.6",
+    "sass-embedded": "^1.97.3",
+    "vuepress": "^2.0.0-rc.26",
+    "webpack": "^5.105.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.3"
+  },
+  "dependencies": {}
 }
